# messaging

./: .dockerignore  .gitignore  .gitmodules  .golangci.yaml  Dockerfile  README.md  go.mod  go.sum  moon.yml
.github/workflows/: build.yml  ci.yml  gen-python-stubs.yml  publish-npm.yml  publish-pypi.yml  release.yml
cmd/server/: main.go  metrics_integration_test.go
cmd/slackreplytest/: README.md  main.go
config/: config.go  config.yaml  config_test.go
docs/changelog/: 2026-05-14-slack-ingress-observer-auto-link-channel-messages.md  2026-05-14-slack-meta-mentions-threads-dms.md  2026-05-14-slack-observe-channels.md  2026-05-14-slack-permalink-workspace-fallback.md  2026-05-14-slack-reaction-thread-url-line.md  2026-05-15-platform-context-provenance.md  2026-05-15-slack-footer-plain-agent-id.md  2026-05-15-slack-resolve-workos-user.md  2026-05-18-slack-ingress-foundation.md  2026-05-22-skills.md  (+7 more)
pkg/types/: message.go
scripts/: generate-proto.sh  publish-local.sh
sdk/python/: README.md  pyproject.toml
sdk/python/scripts/: gen_proto.sh
sdk/python/src/astropods_messaging/: __init__.py  inbound_content.py  skills.py
sdk/python/src/astropods_messaging/astro/messaging/v1/: audio_pb2.py  audio_pb2_grpc.py  config_pb2.py  config_pb2_grpc.py  feedback_pb2.py  feedback_pb2_grpc.py  message_pb2.py  message_pb2_grpc.py  response_pb2.py  response_pb2_grpc.py  service_pb2.py  service_pb2_grpc.py  skill_pb2.py  skill_pb2_grpc.py
sdk/python/tests/: test_inbound_content.py  test_stubs.py
test-data/: go-serialized-messages.json  go-serialized.json  ts-serialized.json
(+98 files in other folders)
