[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astropods-messaging"
version = "0.0.6"
description = "Generated gRPC stubs for the Astropods messaging service"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.62",
  "protobuf>=4.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/astropods_messaging"]

[tool.pytest.ini_options]
testpaths = ["tests"]
